# dataspeed_can-release

./: .hg_archival.txt  .hgtags  0001-use-O0-for-__builtin_memmove.patch  CHANGELOG.rst  CMakeLists.txt  README.md  bitbucket-pipelines.yml  debian.store  melodic.ignored  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
dataspeed_can/: CHANGELOG.rst  CMakeLists.txt  package.xml
dataspeed_can_msg_filters/: CHANGELOG.rst  CMakeLists.txt  package.xml
dataspeed_can_msg_filters/include/dataspeed_can_msg_filters/: ApproximateTime.hpp
dataspeed_can_msg_filters/tests/: CMakeLists.txt  test.cpp
dataspeed_can_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
dataspeed_can_msgs/msg/: Frame16.msg
dataspeed_can_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
dataspeed_can_tools/src/: CanExtractor.cpp  CanExtractor.h  dbc_bag.cpp  dbc_node.cpp
dataspeed_can_tools/tests/: test_iterator.cpp  test_message.cpp  test_signal.cpp
dataspeed_can_usb/: CHANGELOG.rst  CMakeLists.txt  package.xml
dataspeed_can_usb/include/dataspeed_can_usb/: CanDriver.h  CanDriver.hpp  CanUsb.hpp  MacAddr.hpp  ModuleVersion.h  ModuleVersion.hpp
dataspeed_can_usb/scripts/: fw_update.bash
dataspeed_can_usb/src/: CanDriver.cpp  CanUsb.cpp  UsbCanMessages.h
dataspeed_can_usb/tests/: test_mac_addr.cpp  test_module_version.cpp
debian/: changelog  control  copyright  gbp.conf  rules
firmware/: UsbCan_EUCAN_v10.3.0.hex
include/dataspeed_can_usb/: CanUsb.h
launch/: example.launch.xml
msg/: Frame.msg  Frame32.msg  Frame48.msg  Frame64.msg
rpm/: ros-humble-dataspeed-can-msg-filters.spec  ros-humble-dataspeed-can-msgs.spec  ros-humble-dataspeed-can-tools.spec  ros-humble-dataspeed-can-usb.spec  ros-indigo-dataspeed-can-msg-filters.spec  ros-indigo-dataspeed-can-tools.spec  ros-indigo-dataspeed-can-usb.spec  ros-indigo-dataspeed-can.spec  ros-jazzy-dataspeed-can-msgs.spec  ros-jazzy-dataspeed-can-tools.spec  ros-jazzy-dataspeed-can-usb.spec  ros-jazzy-dataspeed-can.spec  ros-kinetic-dataspeed-can-tools.spec  ros-kinetic-dataspeed-can-usb.spec  ros-kinetic-dataspeed-can.spec  ros-melodic-dataspeed-can-msg-filters.spec  ros-melodic-dataspeed-can-tools.spec  ros-melodic-dataspeed-can-usb.spec  ros-melodic-dataspeed-can.spec  ros-noetic-dataspeed-can-tools.spec  template.spec
scripts/: fw_update.bash
src/: CanDriver.cpp  CanExtractor.cpp  CanExtractor.h  dbc_bag.cpp
tests/: CMakeLists.txt  test_full.cpp  test_message.cpp
